tests/valid/module/public_sibling_access.facet
pub mod api {
  pub fn id(x: affine isize) -> affine isize { x }
}

fn main() -> affine isize {
  (api::id 1)
}
