tests/invalid/function/top_level_direct_mutual_recursion_safety_gate.facet
fn left(x: unrestricted isize) -> unrestricted isize {
  (right x)
}

fn right(x: unrestricted isize) -> unrestricted isize {
  (left x)
}

fn main() -> unrestricted isize {
  (left 1)
}
